--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    border: 5px black double;
+    height: 500px;
+    width: 500px;
+    align-content: center;
+   
+}
+.grid {
+    height: auto;
+    width: auto;
+    border: gold 10px solid;
+}
